使用 Colaboratory 建立

--- a/李安_Week_12_作業練習.ipynb
+++ b/李安_Week_12_作業練習.ipynb
@@ -65,7 +65,7 @@
         "else:\n",
         "    print(cost)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "else:\n",
         "    print(num, '為奇數')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,29 +156,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X4X7hldGh9WU",
-        "outputId": "8d53b8ce-b2ea-45fe-a759-8a56ccb71265"
+        "id": "X4X7hldGh9WU"
       },
       "source": [
-        "cost = int(input(\"輸入金額\"))\n",
-        "if cost >=2000:\n",
-        "    print(\"cost * 0.9\")\n",
-        "else:\n",
-        "    print(cost)"
+        ""
       ],
       "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "輸入金額1580\n",
-            "1580\n"
-          ],
-          "name": "stdout"
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_pXbkJnAG0mo"
+      },
+      "source": [
+        "方法一的程式，答案可能會有兩個以上，因為沒有限制答案正確，就輸出結果，而方法二有用到if else ，這讓輸出的答案會停留在正確的程式\n",
+        "行中。舉個例子，當輸入的答案為8時，方法一出來的會是\n",
+        "Enter a number: 8\n",
+        "num is less than 10\n",
+        "num is greater than 3\n",
+        "Finished.\n",
+        "而方法二會是\n",
+        "Pick a number! 8\n",
+        "number is less than 10.\n",
+        "Finished."
       ]
     },
     {
@@ -223,13 +224,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f94_RHYsh9WV"
+        "id": "f94_RHYsh9WV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2875b8b6-ab38-48bf-d012-cf0ca5b7e105"
       },
       "source": [
-        ""
+        "cher_dress_color = \"pink\"\n",
+        "cher_shoe_color = \"white\"\n",
+        "cher_has_earrings = True\n",
+        "dionne_dress_color = \"purple\"\n",
+        "dionne_shoe_color = \"pink\"\n",
+        "dionne_has_earrings = True\n",
+        "print(f'At least one person is wearing pink? {cher_dress_color == \"pink\" or dionne_dress_color == \"purple\"}')\n",
+        "print(f'Cher and Dionne have different dress colors. {cher_dress_color == \"pink\" or dionne_dress_color == \"purple\"}')\n",
+        "print(f'Cher and Dionne are both earing earrings. {cher_has_earrings == True or dionne_has_earrings  == True}')\n",
+        "print(f'At least one person is wearing purple? {cher_dress_color == \"pink\" or dionne_dress_color == \"purple\"}')\n",
+        "print(f'No one is wearing green {cher_dress_color == \"pink\" or dionne_dress_color == \"purple\"}')\n",
+        "print(f'Cher and Dionne have the same shoe color. {cher_shoe_color == \"white\" or dionne_shoe_color  == \"pink\"}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "At least one person is wearing pink? True\n",
+            "Cher and Dionne have different dress colors. True\n",
+            "Cher and Dionne are both earing earrings. True\n",
+            "At least one person is wearing purple? True\n",
+            "No one is wearing green True\n",
+            "Cher and Dionne have the same shoe color. True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
